Fix overflow bug, finalize some styling, refactor

--- a/client/staticRestyleCode/public/css/base/base.css
+++ b/client/staticRestyleCode/public/css/base/base.css
@@ -11,6 +11,7 @@ body {
   height: 100vh;
   display: grid;
   grid: "header header" auto "sidebar main" 1fr/max-content 1fr;
+  overflow: hidden;
 }
 body > header {
   grid-area: header;
