--- a/client/staticRestyleCode/public/css/portfolio/portfolio.css
+++ b/client/staticRestyleCode/public/css/portfolio/portfolio.css
@@ -36,7 +36,7 @@
   width: fit-content;
   transform: translateY(-2px);
   box-shadow: 0 2px 0 rgb(177, 177, 177);
-  /* give room to the absolute .btn--toggle-order */
+  /* Visual space to put the absolutely positioned .btn--toggle-order into */
   padding: 0.5rem 2.8rem 0.5rem 0.8rem;
   border-radius: 1rem;
   --color-bg: rgb(237 167 115);
@@ -62,7 +62,7 @@
 .sort-control .control__input {
   appearance: none;
   background: rgba(255, 0, 0, 0);
-  /* fill the .sort-control */
+  /* Fill the parent ( .sort-control ) */
   width: 100%;
   height: 100%;
   position: absolute;
@@ -143,7 +143,7 @@
   background: rgb(110, 209, 255);
   border: 1px solid rgb(110, 209, 255);
   box-shadow: 0 2px 0 rgba(177, 177, 177, 0.35);
-  transition: 0.2s background;
+  transition: 0.4s background, 0.2s border-color;
 }
 .paginator .pagiator__buttons .btn--pager:hover {
   background: rgb(107, 193, 233);
@@ -165,6 +165,14 @@
 .paginator .pagiator__buttons .btn--pager:has(.arrow-icon) .arrow-icon--left {
   rotate: -90deg;
   transform: translate(-50%, -50%);
+}
+.paginator .pagiator__buttons .btn--current-pager {
+  background: rgb(101, 185, 225);
+  border: 1px solid rgb(48, 125, 161);
+}
+.paginator .pagiator__buttons .btn--current-pager:hover {
+  background: rgb(101, 185, 225);
+  border: 1px solid rgb(48, 125, 161);
 }
 
 /*# sourceMappingURL=portfolio.css.map */
